song service for uploading ready to stream songs
